added toggle-trhoughput microbench

--- a/libpointpatch/microbenchmarks/README
+++ b/libpointpatch/microbenchmarks/README
@@ -3,6 +3,13 @@
 Libpointpatch microbenchmarks 
 -----------------------------
 
+UPDATE Nov 9 2015 
+-----------------
+  
+  Adding microbench 
+    - toggle-throughput 	
+
+
 UPDATE Oct 29  2015
 -------------------
  
